fixed alignment and added images at the sponsored insight section

--- a/assests/stylesheet/style.css
+++ b/assests/stylesheet/style.css
@@ -10,7 +10,7 @@
 }
 
 .black-bold-font {
-  font-size: 20px !important;
+  font-size: 100% !important;
   font-weight: bolder !important;
   color: black !important;
 }
